[package]
name = "rastach-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = { version = "0.15", features = ["native-tls"]}
tokio-rustls = "0.26.0"
rustls = "0.23.9"
rustls-pemfile = "2.1.2"
futures-util = "0.3.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
rand = "0.8"